# rustyboi

./: .gitignore  .pre-commit-config.yaml  CORE_LOOP_REWRITE.md  CYCLE_ACCURACY_PLAN.md  Cargo.toml  ENDGAME_CC.md  ENGINE_DS_SUBDOT.md  ENGINE_LAZY_PPU.md  ENGINE_PERACCESS.md  ENGINE_REWRITE.md  ENGINE_SUBCC.md  GAMBATTE_ACCURACY_FLOOR.md  KNOWN_FAILURES.md  Makefile  README.md  SUITES.md  THIRD-PARTY-NOTICES.md  build-android.sh  build-libretro-android.sh  build-wasm.sh
.baselines/: co_220.json  coreloop.json  diffn.py  leverb_wip_393.json  main_100.json  main_101.json  main_106.json  main_131.json  main_134.json  main_135.json  main_143.json  main_154.json  main_158.json  main_167.json  main_177.json  main_181.json  main_183.json  main_185.json  main_195.json  main_205.json  main_218.json  main_222.json  (+50 more)
rustyboi/: Cargo.toml
rustyboi-core/: Cargo.toml
rustyboi-core/examples/: link_demo.rs
rustyboi-core/src/: cartridge.rs  cgb_compat_palette.rs  cheats.rs  checksum.rs  dmg07.rs  gb.rs  input.rs  ir.rs  lib.rs  mobile.rs  movie.rs  printer.rs  serial.rs  sgb.rs  sgb_firmware.rs  sgb_system_palette.rs  timer.rs
rustyboi-core/src/audio/: analog.rs  controller.rs  envelope.rs  length.rs  mod.rs  noise.rs  output.rs  square.rs  wave.rs
rustyboi-core/src/cartridge/: camera.rs  cartridge.rs  header.rs  huc1.rs  huc3.rs  mapper.rs  mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mbc6.rs  mbc7.rs  mod.rs  nombc.rs  rtc.rs  tama5.rs  unlicensed.rs
rustyboi-core/src/cpu/: bus.rs  mod.rs  opcodes.rs  registers.rs  sm83.rs
rustyboi-core/src/memory/: buffer.rs  mmio.rs  mod.rs
rustyboi-core/src/memory/dma/: gdma.rs  hdma.rs  mod.rs  oam.rs
rustyboi-core/src/memory/mmio/: dma.rs  gdma.rs  hdma.rs  mod.rs
rustyboi-core/src/memory/mmio/dma/: mod.rs
rustyboi-core/src/ppu/: color_mix.rs  controller.rs  dirty_probe.rs  fetcher.rs  fifo.rs  frame_out.rs  hdma.rs  lcdc.rs  m0_window.rs  mod.rs  mode3.rs  modes.rs  reads.rs  reg_writes.rs  stat_engine.rs  stat_irq.rs  window_glitch.rs
rustyboi-core/tests/: boot_rom_hle_parity.rs  boot_rom_logo_search.rs  savestate_golden.rs  struct_size_guard.rs
rustyboi-core/tests/fixtures/: cgb_acid2.state  dmg_acid2.state
rustyboi-egui/: Cargo.toml
rustyboi-egui/src/: actions.rs  android_bridge.rs  file_dialog.rs  ios_bridge.rs  keybind_settings.rs  lib.rs  library.rs  touch_controls.rs  ui.rs
rustyboi-egui/src/debug/: cartridge_info.rs  cpu_registers.rs  memory_explorer.rs  mod.rs  palette_explorer.rs  pixels.rs  ppu_debug.rs  sprite_debug.rs  stack_explorer.rs  tile_explorer.rs
rustyboi-frontend/: Cargo.toml
rustyboi-frontend/shaders/: scale.wgsl
rustyboi-frontend/src/: app.rs  contract.rs  keymap.rs  lib.rs  palette.rs  renderer.rs  soft.rs  ui_host.rs
rustyboi-libretro/: Cargo.toml  rustyboi_libretro.info
rustyboi-libretro/src/: core_options.rs  lib.rs
rustyboi-platform/: Cargo.toml  build.rs
rustyboi-platform/src/: android.rs  app.rs  audio.rs  config.rs  display.rs  error.rs  fetch_worker.rs  framework.rs  game_renderer.rs  ios.rs  lib.rs  library.rs  main.rs  no_intro_cache.rs  png_worker.rs  ports.rs  rewind_worker.rs  run.rs
rustyboi-replay-web/: Cargo.toml
rustyboi-replay-web/src/: lib.rs
rustyboi-session/: Cargo.toml
rustyboi-session/src/: action.rs  apply.rs  audio.rs  cheat_db.rs  cheats.rs  config.rs  debug.rs  input.rs  input_config.rs  lib.rs  no_intro.rs  overlay.rs  pacing.rs  patch.rs  ports.rs  present.rs  rewind.rs  rom_zip.rs  session.rs  tas.rs
rustyboi-session/src/session/: cheat_ops.rs  printer.rs  rewind.rs  save_data.rs  settings.rs  slots.rs  tas.rs
rustyboi-session/tests/: ff_audio.rs  session_tests.rs
rustyboi-test-runner/: Cargo.toml
rustyboi-test-runner/src/: app.rs  cli.rs  expectation.rs  frame.rs  imaging.rs  lib.rs  main.rs  masher.rs  report.rs  runner.rs  script.rs  sramtrace.rs
rustyboi-test-runner/suites/: acid2.manifest  age.manifest  blargg.manifest  blargg_singles.manifest  bully.manifest  cgb_acid_hell.manifest  cpp.manifest  daid.manifest  gambatte.manifest  gbc_hw_tests.manifest  gbmicrotest.manifest  little_things_extra.manifest  little_things_gb.manifest  magentests.manifest  mbc3_tester.manifest  mealybug.manifest  mooneye.manifest  mooneye_wilbertpol.manifest  rtc3test.manifest  rustyboi.manifest  samesuite_apu.manifest  samesuite_nonapu.manifest  samesuite_sgb.manifest  scribbltests.manifest  sgb.manifest  sketchtests.manifest  strikethrough.manifest  turtle_tests.manifest
rustyboi-test-runner/suites/refs/: 400-dma.oam.dump
rustyboi-test-runner/suites/refs/gbc-hw-tests/serial/: sc_change_freq_gbc.gbasp.sav  sc_change_freq_gbc.gbc.sav
rustyboi-test-runner/suites/refs/gbc-hw-tests/timers/: timer_reset_2.gbasp.sav  timer_reset_2.gbc.sav
rustyboi-test-runner/suites/shootout/: acid.manifest  ashiepaws.manifest  ax6.manifest  blargg.manifest  cpp.manifest  daid.manifest  mealybug.manifest  mooneye.manifest  samesuite.manifest
rustyboi-web/: .gitignore  Cargo.toml  README.md  build.rs  webdriver.json
rustyboi-web/src/: audio.rs  lib.rs  overlay.rs  storage.rs  web_action.rs  webapp.rs
rustyboi-web/tests/: web_files.rs  web_mainthread.rs  web_rewind.rs
rustyboi-web/tests/common/: mod.rs
rustyboi-web/www/: index.html  manifest.webmanifest  sw.js  worker.js
rustyboi/src/: cartridge.rs  config.rs  gb.rs  main.rs  timer.rs
rustyboi/src/audio/: audio.rs  mod.rs  noise.rs  output.rs
rustyboi/src/cartridge/: mod.rs
rustyboi/src/config/: config.rs
rustyboi/src/cpu/: cpu.rs  mod.rs  opcodes.rs  registers.rs  sm83.rs
rustyboi/src/cpu/opcodes/: mod.rs  opcodes.rs
rustyboi/src/display/: mod.rs  pixels.rs  terminal.rs
rustyboi/src/display/gui/: actions.rs  keybind_settings.rs  main_ui.rs  mod.rs
rustyboi/src/display/gui/debug/: cpu_registers.rs  memory_explorer.rs  mod.rs  palette_explorer.rs  ppu_debug.rs  sprite_debug.rs  stack_explorer.rs  tile_explorer.rs
rustyboi/src/gb/: gb.rs
rustyboi/src/input/: input.rs
rustyboi/src/memory/: mmio.rs
rustyboi/src/ppu/: controller.rs  fetcher.rs  mod.rs  ppu.rs
rustyboi/src/timer/: timer.rs
(+203 files in other folders)
