[workspace]
resolver = "2"
members = [
    "rustyboi-core",
    "rustyboi-debugger",
    "rustyboi-egui",
    "rustyboi-platform",
    "rustyboi-test-runner",
    "rustyboi-libretro",
    "run-wasm",
]
default-members = ["rustyboi-core", "rustyboi-debugger", "rustyboi-egui", "rustyboi-platform"]

[profile.dev]
opt-level = "s"

[profile.release]
strip = true
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.profiling]
inherits = "release"
strip = false
debug = true
