[workspace]
resolver = "2"
members = [
    "rustyboi-core",
    "rustyboi-session",
    "rustyboi-debugger",
    "rustyboi-egui",
    "rustyboi-frontend",
    "rustyboi-platform",
    "rustyboi-test-runner",
    "rustyboi-libretro",
    "rustyboi-libretro-sys",
    "rustyboi-web",
    "rustyboi-replay",
    "rustyboi-replay-web",
]
default-members = ["rustyboi-core", "rustyboi-debugger", "rustyboi-egui", "rustyboi-platform"]

# Single source of truth for every dependency used by 2+ workspace members.
# Members reference these with `dep = { workspace = true }` and add only the
# extra features they need on top of the shared base below. Path deps with a
# single consumer stay inline in that consumer.
[workspace.dependencies]
rustyboi-core = { path = "rustyboi-core" }
rustyboi-frontend = { path = "rustyboi-frontend" }
# `encode` (the brotli compressor half) is this crate's own default feature;
# rustyboi-replay-web opts out of it, so the shared base must not force it on.
rustyboi-replay = { path = "rustyboi-replay", default-features = false }
rustyboi-session = { path = "rustyboi-session" }

bincode = "=1.3.3"
clap = { version = "=4.6.2", features = ["derive"] }
egui = "=0.35.0"
pollster = "=1.0.1"
rfd = "=0.17.2"
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = "=1.0.151"
wasm-bindgen = "=0.2.126"
wasm-bindgen-futures = "=0.4.76"
wgpu = "=29.0.4"
winit = { version = "=0.30.13", default-features = false, features = ["rwh_06"] }
zip = { version = "=8.6.0", default-features = false, features = ["deflate"] }

[profile.dev]
opt-level = "s"

[profile.release]
strip = true
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.profiling]
inherits = "release"
strip = false
debug = true
