[package]
name = "rustyboi-core"
version = "0.1.0"
edition = "2024"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rustyboi_core_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
clap = { version = "=4.6.1", features = ["derive"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_bytes = "=0.11.19"
serde_json = "=1.0.145"
bincode = "=1.3.3"
zip = { version = "=8.6.0", default-features = false, features = ["deflate","deflate64","lzma"] }

# `std::time::SystemTime::now()` traps on wasm32-unknown-unknown; `web-time` is a
# drop-in that reads the browser clock. Only the RTC persistence paths use it.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "=0.2.4"
