[package]
name = "rustyboi-core"
version = "0.1.0"
edition = "2024"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rustyboi_core_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_bytes = "=0.11.19"
libm = "=0.2.16"
bincode = { workspace = true }
zip = { workspace = true, features = ["deflate64", "lzma"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "=1.1.0"
