[package]
name = "rustyboi-egui"
version = "0.1.0"
edition = "2024"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rustyboi_egui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
rustyboi-core = { path = "../rustyboi-core" }
rustyboi-debugger = { path = "../rustyboi-debugger" }
rustyboi-session = { path = "../rustyboi-session" }
egui = "=0.35.0"

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android"), not(target_os = "ios")))'.dependencies]
rfd = "=0.17.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rfd = "=0.17.2"
wasm-bindgen-futures = "=0.4.76"

# cargo-machete matches `extern crate` names by source text; these deps are used
# under their renamed `_lib` lib names (see the `[lib] name` comments), which the
# tool cannot see. Without this it reports them as unused on every run.
[package.metadata.cargo-machete]
ignored = ["rustyboi-core", "rustyboi-debugger"]
