[package]
name = "rustyboi-frontend"
version = "0.1.0"
edition = "2024"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rustyboi_frontend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
rustyboi-core = { path = "../rustyboi-core" }
rustyboi-session = { path = "../rustyboi-session" }
rustyboi-egui = { path = "../rustyboi-egui" }
egui = "=0.35.0"
egui-wgpu = "=0.35.0"
wgpu = "=29.0.4"
winit = { version = "=0.30.13", default-features = false, features = ["rwh_06"] }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
egui-winit = { version = "=0.35.0", default-features = false, features = ["clipboard", "links", "wayland", "x11"] }
winit = { version = "=0.30.13", default-features = false, features = ["rwh_06", "wayland", "wayland-csd-adwaita", "wayland-dlopen", "x11"] }
softbuffer = "=0.4.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
egui-winit = { version = "=0.35.0", default-features = false, features = ["links"] }
# On wasm, wgpu must use its WebGL2 backend (Firefox has no stable WebGPU). This
# feature pulls naga's GLSL out-path + the GL backend so the same Renderer runs
# on a browser canvas surface.
wgpu = { version = "=29.0.4", features = ["webgl"] }

[target.'cfg(target_os = "android")'.dependencies]
egui-winit = { version = "=0.35.0", default-features = false, features = ["links", "android-game-activity"] }
winit = { version = "=0.30.13", default-features = false, features = ["rwh_06", "android-game-activity"] }

[target.'cfg(not(any(target_arch = "wasm32", target_os = "android", target_os = "ios")))'.dev-dependencies]
pollster = "=1.0.1"

# cargo-machete matches `extern crate` names by source text; these deps are used
# under their renamed `_lib` lib names (see the `[lib] name` comments), which the
# tool cannot see. Without this it reports them as unused on every run.
[package.metadata.cargo-machete]
ignored = ["rustyboi-core", "rustyboi-egui"]
