[package]
name = "rustyboi-libretro"
version = "0.1.0"
edition = "2024"

[lib]
name = "rustyboi_libretro"
crate-type = ["cdylib"]

[dependencies]
rustyboi-core = { path = "../rustyboi-core" }
rust-libretro = { version = "0.3.2", features = ["unstable-env-commands"] }
# Referenced by rust-libretro's `input_descriptors!` / `CoreOptions` macro
# expansions (they emit `libc::c_char`), so it must stay a direct dependency.
libc = "0.2"
