[package]
name = "rustyboi-libretro"
version = "0.1.0"
edition = "2024"

[lib]
name = "rustyboi_libretro"
crate-type = ["cdylib"]

[dependencies]
rustyboi-core = { path = "../rustyboi-core" }
rustyboi-session = { path = "../rustyboi-session" }
rustyboi-libretro-sys = { path = "../rustyboi-libretro-sys" }
