[package]
name = "rustyboi-libretro"
version = "0.1.0"
edition = "2024"

[lib]
name = "rustyboi_libretro"
crate-type = ["cdylib", "rlib"]

[dependencies]
rustyboi-core = { workspace = true }
rustyboi-session = { workspace = true }
rustyboi-libretro-sys = { path = "../rustyboi-libretro-sys" }

# cargo-machete matches `extern crate` names by source text; these deps are used
# under their renamed `_lib` lib names (see the `[lib] name` comments), which the
# tool cannot see. Without this it reports them as unused on every run.
[package.metadata.cargo-machete]
ignored = ["rustyboi-core"]
