[package]
name = "rustyboi-platform"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rustyboi"
path = "src/main.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rustyboi_platform_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
rustyboi-core = { path = "../rustyboi-core" }
rustyboi-frontend = { path = "../rustyboi-frontend" }
rustyboi-session = { path = "../rustyboi-session" }
clap = { version = "=4.6.1", features = ["derive"] }
log = "=0.4.33"
wgpu = "=29.0.4"
pollster = "=1.0.1"
rodio = { version = "=0.22.2", default-features = false, features = ["playback"] }
serde_json = "=1.0.150"
winit = { version = "=0.30.13", default-features = false, features = ["rwh_06"] }
winit_input_helper = "=0.17.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "=3.3.0", default-features = false, features = ["tls", "gzip"] }
rustls = { version = "=0.23.42", default-features = false, features = ["ring", "std", "tls12", "logging"] }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
gilrs = "=0.11.2"
rustls-native-certs = "=0.8.4"

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android"), not(target_os = "ios")))'.dependencies]
winit = { version = "=0.30.13", default-features = false, features = ["rwh_06", "wayland", "wayland-csd-adwaita", "wayland-dlopen", "x11"] }
rfd = "=0.15.4"

[target.'cfg(target_os = "ios")'.dependencies]
winit = { version = "=0.30.13", default-features = false, features = ["rwh_06"] }
# UIKit interop for the document picker (src/ios.rs). The 0.6/0.3 objc2
# generation is already compiled transitively via egui-winit, so this adds no
# new objc2 version to the graph.
objc2 = "=0.6.4"
objc2-foundation = { version = "=0.3.2", features = ["NSArray", "NSString", "NSURL", "NSData", "NSObject"] }
objc2-ui-kit = { version = "=0.3.2", features = ["UIApplication", "UIWindow", "UIView", "UIViewController", "UIResponder", "UIDocumentPickerViewController", "objc2-uniform-type-identifiers"] }
objc2-uniform-type-identifiers = { version = "=0.3.2", features = ["UTType", "UTCoreTypes"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "=0.1.7"
console_log = "=1.0.0"
web-sys = { version = "=0.3.103", features = ["GpuTextureFormat"] }
wasm-bindgen = "=0.2.126"
wasm-bindgen-futures = "=0.4.76"

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "=0.30.13", default-features = false, features = ["rwh_06", "android-game-activity"] }
android_logger = "=0.15.1"
jni = "=0.21.1"
libc = "=0.2.186"
ndk-context = "=0.1.1"
ndk-sys = "=0.6.0"
# Low-latency Android audio: oboe requests AAudio's MMAP/LOW_LATENCY path (which
# cpal never does, pinning us to the higher-latency Legacy path). Fed by a
# lock-free SPSC ring from the emulator thread into oboe's real-time callback.
oboe = { version = "=0.6.1", features = ["java-interface", "ndk-context"] }
ringbuf = "=0.5.0"
