[package]
name = "rustyboi-platform"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rustyboi"
path = "src/main.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rustyboi_platform_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
rustyboi-core = { path = "../rustyboi-core" }
rustyboi-frontend = { path = "../rustyboi-frontend" }
rustyboi-session = { path = "../rustyboi-session" }
clap = { version = "=4.6.2", features = ["derive"] }
log = "=0.4.33"
wgpu = "=29.0.4"
pollster = "=1.0.1"
cpal = "=0.18.1"
ringbuf = "=0.5.1"
serde_json = "=1.0.150"
winit = { version = "=0.30.13", default-features = false, features = ["rwh_06"] }
winit_input_helper = "=0.17.0"
ureq = { version = "=3.3.0", default-features = false, features = ["rustls", "gzip"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
gilrs = "=0.11.2"
rustls-native-certs = "=0.8.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
winit = { version = "=0.30.13", default-features = false, features = ["rwh_06", "wayland", "wayland-csd-adwaita", "wayland-dlopen", "x11"] }
rfd = "=0.17.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "=0.61.2", features = ["Win32_Media"] }

[target.'cfg(target_os = "ios")'.dependencies]
winit = { version = "=0.30.13", default-features = false, features = ["rwh_06"] }
objc2 = "=0.6.4"
objc2-foundation = { version = "=0.3.2", features = ["NSArray", "NSString", "NSURL", "NSData", "NSObject"] }
objc2-ui-kit = { version = "=0.3.2", features = ["UIApplication", "UIWindow", "UIView", "UIViewController", "UIResponder", "UIDocumentPickerViewController", "objc2-uniform-type-identifiers"] }
objc2-uniform-type-identifiers = { version = "=0.3.2", features = ["UTType", "UTCoreTypes"] }

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "=0.30.13", default-features = false, features = ["rwh_06", "android-game-activity"] }
android_logger = "=0.15.1"
jni = "=0.21.1"
libc = "=0.2.186"
ndk-context = "=0.1.1"
ndk-sys = "=0.6.0"
oboe = { version = "=0.6.1", features = ["java-interface", "ndk-context"] }

# cargo-machete matches `extern crate` names by source text; these deps are used
# under their renamed `_lib` lib names (see the `[lib] name` comments), which the
# tool cannot see. Without this it reports them as unused on every run.
[package.metadata.cargo-machete]
ignored = ["rustyboi-core", "rustyboi-frontend"]
