[package]
name = "rustyboi-replay-web"
version = "0.1.0"
edition = "2024"

[lib]
name = "rustyboi_replay_web"
crate-type = ["cdylib", "rlib"]

[dependencies]
rustyboi-replay = { path = "../rustyboi-replay", default-features = false }
wasm-bindgen = "=0.2.126"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
