[package]
name = "rustyboi-session"
version = "0.1.0"
edition = "2024"

[lib]
name = "rustyboi_session"

[dependencies]
rustyboi-core = { path = "../rustyboi-core" }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
bincode = "=1.3.3"
zip = { version = "=8.6.0", default-features = false, features = ["deflate"] }
