[package]
name = "rustyboi-session"
version = "0.1.0"
edition = "2024"

[lib]
name = "rustyboi_session"

[dependencies]
rustyboi-core = { path = "../rustyboi-core" }
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = "=1.0.150"
bincode = "=1.3.3"
zip = { version = "=8.6.0", default-features = false, features = ["deflate"] }
miniz_oxide = "=0.9.1"

# cargo-machete matches `extern crate` names by source text; these deps are used
# under their renamed `_lib` lib names (see the `[lib] name` comments), which the
# tool cannot see. Without this it reports them as unused on every run.
[package.metadata.cargo-machete]
ignored = ["rustyboi-core"]
