[package]
name = "rustyboi-session"
version = "0.1.0"
edition = "2024"

[lib]
name = "rustyboi_session"

[dependencies]
rustyboi-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
zip = { workspace = true }
miniz_oxide = "=0.9.1"

# cargo-machete matches `extern crate` names by source text; these deps are used
# under their renamed `_lib` lib names (see the `[lib] name` comments), which the
# tool cannot see. Without this it reports them as unused on every run.
[package.metadata.cargo-machete]
ignored = ["rustyboi-core"]
