[package]
name = "rustyboi-test-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "=4.6.2", features = ["derive"] }
flate2 = "=1.1.9"
image-webp = "=0.2.4"
rayon = "=1.12.0"
rustyboi-core = { path = "../rustyboi-core" }
rustyboi-replay = { path = "../rustyboi-replay" }
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = "=1.0.150"

# cargo-machete matches `extern crate` names by source text; these deps are used
# under their renamed `_lib` lib names (see the `[lib] name` comments), which the
# tool cannot see. Without this it reports them as unused on every run.
[package.metadata.cargo-machete]
ignored = ["rustyboi-core"]
