[package]
name = "rustyboi-test-runner"
version = "0.1.0"
edition = "2024"

[lib]
# The `_lib` suffix may seem redundant but it is necessary to make the lib name
# unique and wouldn't conflict with the bin name. This seems to be only an issue
# on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rustyboi_test_runner_lib"
crate-type = ["rlib"]

[dependencies]
clap = { workspace = true }
flate2 = "=1.1.9"
image-webp = "=0.2.4"
rayon = "=1.12.0"
rustyboi-core = { workspace = true }
rustyboi-replay = { workspace = true, features = ["default"] }
serde = { workspace = true }
serde_json = { workspace = true }

# cargo-machete matches `extern crate` names by source text; these deps are used
# under their renamed `_lib` lib names (see the `[lib] name` comments), which the
# tool cannot see. Without this it reports them as unused on every run.
[package.metadata.cargo-machete]
ignored = ["rustyboi-core"]
