[package]
name = "rustyboi-web"
version = "0.1.0"
edition = "2021"
description = "WASM/Firefox web frontend for the rustyboi Game Boy / Color emulator"

[lib]
crate-type = ["cdylib"]

# wasm-pack's BUNDLED wasm-opt is too old to validate the post-MVP wasm features
# LLVM emits (bulk-memory memory.copy/fill, sign-ext, ...). So disable it here
# and run a current binaryen wasm-opt from `tools/build-web.sh` instead, which
# passes `-all` (enable all features — required even on the latest binaryen).
# Build with `tools/build-web.sh`, NOT bare `wasm-pack build`. Needs binaryen
# (`sudo pacman -S binaryen`).
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[dependencies]
rustyboi-session = { path = "../rustyboi-session" }
rustyboi-core = { path = "../rustyboi-core" }
# The portable UI + renderer: the main-thread egui driver (`webapp.rs`) uses its
# `Renderer` (wgpu WebGL2) + `UiHost` (egui) so web renders the same egui UI as
# desktop. Its `webgl` wgpu feature is enabled per-target in its own Cargo.toml.
rustyboi-frontend = { path = "../rustyboi-frontend" }

# wgpu (WebGL2 backend, GL instance) + winit (canvas) for the main-thread driver.
wgpu = { version = "=29.0.4", features = ["webgl"] }
winit = { version = "=0.30.13", default-features = false, features = ["rwh_06"] }

wasm-bindgen = "=0.2.126"
wasm-bindgen-futures = "=0.4.76"
js-sys = "=0.3.103"
console_error_panic_hook = "=0.1.7"

# Transport (de)serialization for UiAction / SessionUiState across the worker
# boundary (rustyboi-session's types are intentionally not serde-derived).
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"

[dependencies.web-sys]
version = "=0.3.103"
features = [
    # Main-thread rendering: the egui/wgpu driver draws into this canvas.
    "HtmlCanvasElement",
    "console",
    # IndexedDB storage
    "IdbFactory",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbRequest",
    "IdbOpenDbRequest",
    "IdbKeyRange",
    "IdbCursorWithValue",
    "IdbCursor",
    "DomStringList",
    "Event",
    # WebAudio
    "AudioContext",
    "AudioContextState",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioDestinationNode",
    "AudioNode",
    "AudioParam",
    "GainNode",
    # Gamepad polling (physical controllers on the main thread).
    "Window",
    "Navigator",
    "Gamepad",
    "GamepadButton",
]
