[package]
name = "rustyboi-web"
version = "0.1.0"
edition = "2021"
description = "WASM frontend for the rustyboi Game Boy / Color emulator"

[lib]
crate-type = ["cdylib", "rlib"]

# wasm-pack's BUNDLED wasm-opt is too old to validate the post-MVP wasm features
# LLVM emits (bulk-memory memory.copy/fill, sign-ext, ...). So disable it here
# and run a current binaryen wasm-opt from `make web` instead, which
# passes `-all` (enable all features — required even on the latest binaryen).
# Build with `make web`, NOT bare `wasm-pack build`. Needs binaryen
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[dependencies]
rustyboi-session = { path = "../rustyboi-session" }
rustyboi-core = { path = "../rustyboi-core" }
rustyboi-frontend = { path = "../rustyboi-frontend" }

wgpu = { version = "=29.0.4", features = ["webgl"] }
winit = { version = "=0.30.13", default-features = false, features = ["rwh_06"] }

wasm-bindgen = "=0.2.126"
wasm-bindgen-futures = "=0.4.76"
js-sys = "=0.3.103"
console_error_panic_hook = "=0.1.7"

serde_json = "=1.0.150"

[dependencies.web-sys]
version = "=0.3.103"
features = [
    # Main-thread rendering: the egui/wgpu driver draws into this canvas.
    "HtmlCanvasElement",
    "console",
    # (tests/web_mainthread.rs): create a canvas, dispatch key events at winit.
    "Document",
    "HtmlElement",
    "Node",
    "EventTarget",
    "KeyboardEvent",
    "KeyboardEventInit",
    # IndexedDB storage
    "IdbFactory",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbRequest",
    "IdbOpenDbRequest",
    "IdbKeyRange",
    "IdbCursorWithValue",
    "IdbCursor",
    "DomStringList",
    "Event",
    # WebAudio
    "AudioContext",
    "AudioContextState",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioDestinationNode",
    "AudioNode",
    "AudioParam",
    "GainNode",
    # Gamepad polling (physical controllers on the main thread).
    "Window",
    "Navigator",
    "Gamepad",
    "GamepadButton",
]

# `wasm_bindgen_unstable_test_coverage` is set only by `make coverage-web` (see
# the minicov dep + the _MINICOV_ANCHOR in lib.rs). Declare it so ordinary
# `cargo`/`clippy` runs don't flag it as an unexpected cfg.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(wasm_bindgen_unstable_test_coverage)',
] }

[dev-dependencies]
wasm-bindgen-test = "=0.3.76"

# WASM code-coverage runtime. `wasm-bindgen-test` pulls minicov itself under the
# same cfg to provide `__wbgtest_cov_dump`, but the coverage build also
# instruments rustyboi-web's own `cdylib` artifact (cargo emits cdylib+rlib in
# one rustc call), and that final link needs the LLVM profiling runtime symbol
# `__llvm_profile_runtime` which only minicov supplies. Gate it on the exact same
# cfg the coverage build sets (`--cfg=wasm_bindgen_unstable_test_coverage`) so a
# normal `make web` never links it. See `make coverage-web`.
[target.'cfg(all(target_arch = "wasm32", wasm_bindgen_unstable_test_coverage))'.dependencies]
minicov = "=0.3.8"

# cargo-machete matches `extern crate` names by source text; these deps are used
# under their renamed `_lib` lib names (see the `[lib] name` comments), which the
# tool cannot see. Without this it reports them as unused on every run.
[package.metadata.cargo-machete]
ignored = ["rustyboi-core", "rustyboi-frontend"]
