[package]
name = "rustyboi"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
crossbeam = "0.8.4"
egui = "0.26"
egui-wgpu = "0.26.0"
pixels = "0.15.0"
rfd = "0.15.4"
rodio = "0.19"
serde = { version = "1.0.226", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0.145"
winit = "0.29"
winit_input_helper = "0.15"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = { version = "0.26", default-features = false, features = ["clipboard", "links", "wayland", "x11"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
egui-winit = { version = "0.26", default-features = false, features = ["links"] }

[profile.release]
# 454744 bytes
strip = true
# 377544
opt-level = "z"
# 373448
# lto = true
# 320104
