[package]
name = "rustyboi"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
crossbeam = "0.8.4"
egui = "0.26"
egui-wgpu = "0.26.0"
log = "0.4.28"
pixels = "0.15.0"
rodio = "0.19"
serde = { version = "1.0.226", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0.145"
winit = "0.29"
winit_input_helper = "0.16.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = { version = "0.26", default-features = false, features = ["clipboard", "links", "wayland", "x11"] }
rfd = "0.15.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
egui-winit = { version = "0.26", default-features = false, features = ["links"] }
rfd = { version = "0.15.4", features = ["async-std"] }
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
web-sys = { version = "0.3.81", features = ["GpuTextureFormat"] }
